--- a/src/shared/components/UIElements/Modal.css
+++ b/src/shared/components/UIElements/Modal.css
@@ -7,10 +7,13 @@
   background: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 8px;
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 .modal__header {
   width: 100%;
+  z-index: 130;
   padding: 1rem 0.5rem;
   background: #2a006e;
   border-top-left-radius: 8px;
@@ -24,6 +27,7 @@
 
 .modal__content {
   padding: 1rem 0.5rem;
+  overflow-y: auto;
 }
 
 .modal__footer {
